--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -98,5 +98,52 @@
         text-align: center;
       }
     }
+
+    .section__switch-button {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+
+      .switch-button__checkbox {
+        display: none;
+      }
+
+      .switch-button__slider-round {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+        border-radius: 34px;
+
+        &:before {
+          position: absolute;
+          content: "";
+          height: 26px;
+          width: 26px;
+          left: 4px;
+          bottom: 4px;
+          background-color: white;
+          -webkit-transition: 0.4s;
+          transition: 0.4s;
+          border-radius: 50%;
+        }
+      }
+
+      .switch-button__checkbox:checked + .switch-button__slider-round {
+        background-color: #2196f3;
+      }
+
+      .switch-button__checkbox:checked + .switch-button__slider-round:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+      }
+    }
   }
 }
